# validate

./: .gitignore  README.md  pyproject.toml
src/validate/: __init__.py  __version__.py  app.py  artifact.py  cli.py  display.py  downloaders.py  region.py  wcs.py
src/validate/data/: waiting.fits
test/: test_observation.py
test/data/: mocas_test_result.csv
